VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedDown.err
[8MB/454.5MB][  1%][>                                                 ][2MB/s]  [16MB/454.5MB][  3%][=>                                                ][2.667MB/s]  [24MB/454.5MB][  5%][==>                                               ][3MB/s]  [32MB/454.5MB][  7%][===>                                              ][3.2MB/s]  [40MB/454.5MB][  8%][====>                                             ][3.077MB/s]  [48MB/454.5MB][ 10%][=====>                                            ][3.2MB/s]  [56MB/454.5MB][ 12%][======>                                           ][3.111MB/s]  [64MB/454.5MB][ 14%][=======>                                          ][3.2MB/s]  [72MB/454.5MB][ 15%][=======>                                          ][3.13MB/s]  [80MB/454.5MB][ 17%][========>                                         ][3.077MB/s]  [88MB/454.5MB][ 19%][=========>                                        ][2.933MB/s]  [96MB/454.5MB][ 21%][==========>                                       ][2.824MB/s]  [104MB/454.5MB][ 22%][===========>                                      ][2.737MB/s]  [112MB/454.5MB][ 24%][============>                                     ][2.732MB/s]  [120MB/454.5MB][ 26%][=============>                                    ][2.791MB/s]  [128MB/454.5MB][ 28%][==============>                                   ][2.844MB/s]  [136MB/454.5MB][ 29%][==============>                                   ][2.833MB/s]  [144MB/454.5MB][ 31%][===============>                                  ][2.88MB/s]  [152MB/454.5MB][ 33%][================>                                 ][2.868MB/s]  [160MB/454.5MB][ 35%][=================>                                ][2.909MB/s]  [168MB/454.5MB][ 36%][==================>                               ][2.897MB/s]  [176MB/454.5MB][ 38%][===================>                              ][2.983MB/s]  [184MB/454.5MB][ 40%][====================>                             ][3.016MB/s]  [192MB/454.5MB][ 42%][=====================>                            ][3.048MB/s]  [200MB/454.5MB][ 44%][======================>                           ][3.077MB/s]  [208MB/454.5MB][ 45%][======================>                           ][3.104MB/s]  [216MB/454.5MB][ 47%][=======================>                          ][3.13MB/s]  [224MB/454.5MB][ 49%][========================>                         ][3.111MB/s]  [232MB/454.5MB][ 51%][=========================>                        ][3.135MB/s]  [240MB/454.5MB][ 52%][==========================>                       ][3.158MB/s]  [248MB/454.5MB][ 54%][===========================>                      ][3.179MB/s]  [256MB/454.5MB][ 56%][============================>                     ][3.241MB/s]  [264MB/454.5MB][ 58%][=============================>                    ][3.259MB/s]  [272MB/454.5MB][ 59%][=============================>                    ][3.238MB/s]  [280MB/454.5MB][ 61%][==============================>                   ][3.256MB/s]  [288MB/454.5MB][ 63%][===============================>                  ][3.236MB/s]  [296MB/454.5MB][ 65%][================================>                 ][3.253MB/s]  [304MB/454.5MB][ 66%][=================================>                ][3.2MB/s]  [312MB/454.5MB][ 68%][==================================>               ][3.184MB/s]  [320MB/454.5MB][ 70%][===================================>              ][3.137MB/s]  [328MB/454.5MB][ 72%][====================================>             ][3.124MB/s]  [336MB/454.5MB][ 73%][====================================>             ][3.083MB/s]  [344MB/454.5MB][ 75%][=====================================>            ][3.018MB/s]  [352MB/454.5MB][ 77%][======================================>           ][2.885MB/s]  [360MB/454.5MB][ 79%][=======================================>          ][2.835MB/s]  [368MB/454.5MB][ 80%][========================================>         ][2.831MB/s]  [376MB/454.5MB][ 82%][=========================================>        ][2.827MB/s]  [384MB/454.5MB][ 84%][==========================================>       ][2.824MB/s]  [392MB/454.5MB][ 86%][===========================================>      ][2.8MB/s]  [400MB/454.5MB][ 88%][============================================>     ][2.797MB/s]  [408MB/454.5MB][ 89%][============================================>     ][2.795MB/s]  [416MB/454.5MB][ 91%][=============================================>    ][2.719MB/s]  [424MB/454.5MB][ 93%][==============================================>   ][2.667MB/s]  [432MB/454.5MB][ 95%][===============================================>  ][2.65MB/s]  [440MB/454.5MB][ 96%][================================================> ][2.667MB/s]  [448MB/454.5MB][ 98%][=================================================>][2.699MB/s]  [454.5MB/454.5MB][100%][==================================================][2.721MB/s]  [454.5MB/454.5MB][100%][==================================================][2.721MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_40335/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_40335/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
